# fvpy

./: .gitignore  LICENSE  README.md  README.rst  environment-dev.yml  fvpy.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  greetings.yml
dev/codespell/: ignore-words.txt
dev/misc/: insp.md
dev/roadmap/: v0.1.md
fvpy/: __init__.py  _config.yaml  application.py  fvpy.py  version.py
fvpy/backend/: __init__.py  astropy_back.py
fvpy/menu/: __init__.py  menu_bar.py
fvpy/signals/: __init__.py  open.py  open_signal.py
fvpy/utils/: __init__.py  menu_utils.py  path.py
fvpy/window/: __init__.py  license.py  mainwindow.py  tabs.py
